# eco_ai_waste_mgt

./: .gitignore  CHAT_ASSISTANT_GUIDE.md  PROJECT_SUMMARY.md  package-lock.json  package.json  utputFormat
backend/: .gitignore  check_import.py  debug_verify.py  pyproject.toml
backend/src/: db.py  main.py
backend/src/api/: awareness.py  chat_assistant.py  classifier.py  leaderboard_router.py  orchestrator.py  recycling.py  rewards_router.py  users_router.py
backend/src/crews/: awareness_crew.py  chat_assistant_crew.py  classifier_crew.py  orchestrator_crew.py  recycling_crew.py  responsibleAICrew.py
backend/src/models/: request_models.py  response_models.py
backend/src/utils/: auth.py  memory_manager.py  serper_api.py
frontend/: .env  app.py  awarenessapp.py  index.html  package-lock.json  package.json
frontend-streamlit/: app.py  awarenessapp.py
frontend/src/: App.jsx  main.jsx
frontend/src/api/: chat.js  orchestrator.js
frontend/src/components/layout/: Footer.jsx  Header.jsx  Sidebar.jsx  TopNav.jsx
frontend/src/components/pages/: Awareness.jsx  ChatAssistant.jsx  Classifier.jsx  Dashboard.jsx  HomePage.jsx  RecyclingGuide.jsx  Reports.jsx  RewardsAndCommercial.jsx  Settings.jsx  quiz.jsx
frontend/src/components/ui/: Badge.jsx  Card.jsx  StatCard.jsx
